--- a/4장 클래스, 객체, 인터페이스/4.1 클래스 계층 정의.md
+++ b/4장 클래스, 객체, 인터페이스/4.1 클래스 계층 정의.md
@@ -121,9 +121,13 @@ abstract class Animated {
 
 **클래스 내에서 상속 제어 변경자의 의미**
 
+<img width="627" alt="스크린샷 2022-09-28 오전 7 05 54" src="https://user-images.githubusercontent.com/67946662/192646068-be79e53d-921e-402c-912c-7951e034d829.png">
+
 ### 4.1.3 가시성 변경자: 기본적으로 공개
 
 ### **가시성 변경자**
+<img width="532" alt="스크린샷 2022-09-28 오전 7 08 50" src="https://user-images.githubusercontent.com/67946662/192646448-7163ee06-e7af-4e59-ae1e-4b4298420031.png">
+
 
 코드 기반에 있는 선언에 대한 클래스 외부 접근을 제어한다.
 
@@ -166,8 +170,8 @@ class Button : View {
 
 - 코틀린 중첩 클래스에 변경자가 붙지 않으면 자바 static 중첩 클래스와 같다.
     - 내부 클래스로 변경해서 바깥쪽 클래스에 대한 참조를 포함하게 하고 싶다면 **“inner”** 변경자를 붙여야 한다.
-
-![스크린샷 2022-09-28 오전 6.04.51.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/19c3059b-b778-4575-a0a5-02cd925f0b62/%E1%84%89%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%B5%E1%86%AB%E1%84%89%E1%85%A3%E1%86%BA_2022-09-28_%E1%84%8B%E1%85%A9%E1%84%8C%E1%85%A5%E1%86%AB_6.04.51.png)
+    - 
+<img width="470" alt="상속제어변경자" src="https://user-images.githubusercontent.com/67946662/192646276-a4b5323d-0434-44c3-86a7-c620b5ca3a98.png">
 
 - 외부 클래스의 인스턴스를 가리키는 참조를 표기하려면 **this@외부클래스** 라고 써야한다.
 
