--- a/4장 클래스, 객체, 인터페이스/4.2 뻔하지 않은 생성자와 프로퍼티를 갖는 클래스 선언.md
+++ b/4장 클래스, 객체, 인터페이스/4.2 뻔하지 않은 생성자와 프로퍼티를 갖는 클래스 선언.md
@@ -82,7 +82,7 @@ class MyButton : View {
 }
 ```
 
-![IMG_3947.jpg](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/6fb15c1d-7757-4699-b996-6ccdc41b0411/IMG_3947.jpg)
+![frame](https://user-images.githubusercontent.com/67946662/192646864-938546ea-cdb1-4bd8-8637-3a9444e03b57.jpg)
 
 **2) 클래스 인스턴스를 생성할 때 파라미터 목록이 다른 생성 방법이 여럿 존재하는 경우**
 
