--- a/4장 클래스, 객체, 인터페이스/4.2 뻔하지 않은 생성자와 프로퍼티를 갖는 클래스 선언.md
+++ b/4장 클래스, 객체, 인터페이스/4.2 뻔하지 않은 생성자와 프로퍼티를 갖는 클래스 선언.md
@@ -1,9 +1,14 @@
 ### 4.2.1 클래스 초기화: 주 생성자와 초기화 블록
 
+<br/>
+
 **주 생성자**
 
 - 클래스 이름 뒤에 오는 괄호로 둘러싸인 코드
-- 1) 생성자 파라미터 정의  2) 생성자 파라미터에 의해 초기화되는 프로퍼티 정의
+1. 생성자 파라미터 정의  2. 생성자 파라미터에 의해 초기화되는 프로퍼티 정의
+
+
+<br/>
 
 **[1]**
 
@@ -28,6 +33,9 @@ class User constructor(_nickname: String) {
 
 또, 주 생성자 앞에 **별다른 애노테이션이나 가시성 변경자가 없다면** constructor를 생략해도 된다.
 
+
+<br/>
+
 **[2]**
 
 ```kotlin
@@ -37,6 +45,9 @@ class User(_nickname: String) {
 ```
 
 주 생성자의 파라미터로 프로퍼티를 초기화한다면 프로퍼티의 정의와 초기화를 간략히 쓸 수 있다.
+
+
+<br/>
 
 **[3]**
 
@@ -60,11 +71,19 @@ val kkoziri = User("꼬질이들")
 val rim = User("세림", false)
 ```
 
+
+<br/>
+
+
+
 ### 4.2.2 부 생성자: 상위 클래스를 다른 방식으로 초기화
 
 코틀린에서는 생성자에 디폴트 파라미터 값을 제공하기 때문에 생성자가 여럿 있는 경우가 적다.
 
 **그러나, 생성자가 여럿 필요한 경우가 가끔 있다.**
+
+
+<br/>
 
 **1) 프레임워크 클래스를 확장 시 다양한 생성자 지원**
 
@@ -86,7 +105,13 @@ class MyButton : View {
 
 **2) 클래스 인스턴스를 생성할 때 파라미터 목록이 다른 생성 방법이 여럿 존재하는 경우**
 
+
+<br/>
+
 ### 4.2.3 인터페이스에 선언된 프로퍼티 구현
+
+
+<br/>
 
 **인터페이스 선언**
 
@@ -96,13 +121,20 @@ interface User {
 }
 ```
 
+
+<br/>
+
 **인터페이스를 구현**
+
+<br/>
 
 **1) 주 생성자 안에 프로퍼티 직접 선언**
 
 `class PrivateUser(override val nickname: String) : User`
 
 프로퍼티는 User의 추상 프로퍼티를 구현하므로 override를 표시한다.
+
+<br/>
 
 **2) 커스텀 게터로 프로퍼티 설정**
 
@@ -117,6 +149,8 @@ class SubscribingUser (val email: String) : User {
 - 뒷받침하는 필드에 값을 저장하지 않고 매번 이메일 주소에서 별명을 계산해서 반환
 - 매번 호출될 때마다 substringBefore를 호출해 nickname을 계산한다.
 
+<br/>
+
 **3) 초기화 식으로 프로퍼티 설정**
 
 ```kotlin
@@ -127,6 +161,8 @@ class FacebookUser(val accountId: Int) : User {
 
 - getFaceBookName 함수를 호출해서 nickname 초기화
 - 객체 초기화 시 계산한 데이터를 뒷받침하는 필드에 저장했다가 불러오는 방식
+
+<br/>
 
 **인터페이스에는 추상 프로퍼티 뿐 아니라 게터와 세터가 있는 프로퍼티를 선언할 수도 있다.**
 
@@ -140,8 +176,44 @@ interface User {
 }
 ```
 
+<br/>
+
 ### 4.2.4 게터와 세터에서 뒷받침하는 필드에 접근
 
+<br/>
+
+**값을 저장하는 프로퍼티**와 **커스텀 접근자에서 매번 값을 계산하는 프로퍼티**의 유형을 조합하여 **어떤 값을 저장하되 그 값을 변경 혹은 읽을 때마다 정해진 로직을 실행하는 유형의 프로퍼티**를 만든다.
+
+<br/>
+
+- 값을 저장하는 동시에 로직을 실행할 수 있게 하기 위해서는 접근자 안에서 프로퍼티를 뒷받침하는 필드에 접근할 수 있어야 한다.
+
+```kotlin
+class User(val name: String) {
+    var address: String = "unspecified"
+        set(value: String) {
+            // 뒷받침하는 필드 값 읽기
+						println("""
+		            Address was changed for $name:
+		            "$field" -> "%value".""".trimIndent())
+		        // 뒷받침하는 필드 값 변경
+						field = value
+        }
+				// 게터는 필드 값을 반환해주는 뻔한 게터이므로 생략되었다.
+}
+```
+
+- 코틀린에서 프로퍼티의 값을 바꿀 때 사용되는 필드 설정 구문(ex : user.address = “new value”)는 **내부적으로는** address의 **세터를 호출**한다.
+- 위 예제에서는 **커스텀 세터를 정의**해서 추가 로직을 실행한다.
+- 접근자의 본문에서는 field라는 특별한 식별자를 통해 뒷받침하는 필드에 접근할 수 있다.
+    - 게터는 field 값을 읽을 수만 있고, 세터에서는 field 값을 읽거나 쓸 수 있다.
+- 변경 가능 프로퍼티의 게터와 세터 중 한쪽만 직접 정의해도 된다.
+- 클래스의 프로퍼티를 사용하는 쪽에서 **프로퍼티를 읽는 방법이나 쓰는 방법**은 **뒷받침하는 필드의 유무와는 관계가 없다**.
+- **컴파일러는** 디폴트 접근자 구현을 사용하건 직접 게터나 세터를 정의하건 관계없이 **게터나 세터에서 field를 사용하는 프로퍼티에 대해 뒷받침하는 필드를 생성해준다**.
+    - 다만, field를 사용하지 않는 커스텀 접근자 구현을 정의한다면 뒷받침하는 필드는 존재하지 않는다. (var)
+ 
+ <br/>
+ 
 ### 4.2.5 접근자의 가시성 변경
 
 접근자의 가시성은 기본적으로는 프로퍼티의 가시성과 같다.
